# Simple_ECC_secp256k1

./: .clang-format  .clang-tidy  CMakeLists.txt  Create_Doxygen.csh  README.md  Update_Cmake.csh
app/: main.cc
catch2/: CMakeLists.txt
catch2/app/: CMakeLists.txt  main.cc
cmake/: FindGMP.cmake  Sanitizer.cmake  Warnings.cmake
document/: Doxyfile
inc/: CMakeLists.txt  common.hpp  ellipticCurve.hpp  func.hpp  main.hpp  point.hpp
src/: CMakeLists.txt  common.cc  ellipticCurve.cc  func.cc  point.cc
test-vector/: CMakeLists.txt  test-vector.hpp
tests/: CMakeLists.txt
tests/intergration_test/: CMakeLists.txt  main.intergration_test.cc
tests/unit_test/: CMakeLists.txt  main.unit_test.cc
